[project]
name = "erosdiffusion-eulerdiscretescheduler"
description = "Noise Free images with Euler Discrete Scheduler in ComfyUI with Z-Image or other models"
version = "1.0.0"
license = {file = "LICENSE.TXT"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
# ]


[project.urls]
Repository = "https://github.com/erosDiffusion/ComfyUI-EulerDiscreteScheduler"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/erosDiffusion/ComfyUI-EulerDiscreteScheduler/wiki"
"Bug Tracker" = "https://github.com/erosDiffusion/ComfyUI-EulerDiscreteScheduler/issues"

[tool.comfy]
PublisherId = "erosDiffusion"
DisplayName = "ComfyUI-EulerDiscreteScheduler"
Icon = "💜"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

